fix: the lenis package was causing navbar flicker. fixed it by adding data-scroll-behavior="smooth" to the html element instead of scroll-behavior="smooth". fix: Header text wasn't aligning to the center. so i added justify center

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,3 @@ body {
   color: var(--foreground);
   font-family: var(--font-nunito), sans-serif;
 }
-
-html {
-  scroll-behavior: smooth;
-}
